<resources>
    <string name="app_name">Communihealth App V2</string>
    <string name="communihealthTitle">Welcome Nurse!</string>
    <string name="communihealthSubtitle">Service Required:</string>
    <string name="addDetailsButton"> Additional Details</string>
    <string name="cancelPatientButton">Cancel</string>
    <string name="saveDetailsButton">Save Details</string>
    <string name="patientMapButton">Address Map</string>
    <string name="patientImgButton">Upload Image</string>
    <string name="editPatientButton">Edit Details</string>
    <string name="savePatientButton">Save Patient Details</string>
    <string name="homehelp">Home Help</string>
    <string name="dementia">Dementia Care</string>
    <string name="fullcare">Full Nursing Care</string>
    <string name="convalescent">Convalescent Care</string>
    <string name="details">Review details</string>
    <string name="patientDetails">Patient Details:</string>
    <string name="patientSummary">Patient Summary</string>
    <string name="patientNumber">Patient Number:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="birthdate">Date of Birth:</string>
    <string name="street">Street:</string>
    <string name="town">Town:</string>
    <string name="eircode">EirCode:</string>
    <string name="totalPatients">$%d</string>
    <string name="action_addpatient">Add Patient</string>
    <string name="action_patientlist">Patient List</string>
    <string name="patientlistTitle">Patient List</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">CommuniHealth V2.0</string>
    <string name="nav_header_subtitle">nurse@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About CommuniHealth</string>
    <string name="aboutscreen_title">CommuniHealth Mobile App Version 2</string>
    <string name="aboutscreen_message">CommuniHealth \n\n Mobile App Version 2 \n\n... \n\nintro</string>
    <string name="patientsNotFound">No Patients Yet...\nGo Add a Patient!</string>
    <string name="patientError">Error : Couldn\'t Add a Patient...</string>
    <string name="editScreen">Edit Patient Details:</string>
    <string name="action_patientLocation">Patient Location</string>
    <string name="messageLoading">Please Wait while the Donations are Loading...</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="default_web_client_id">974261957589-deqhm60cmistjdvvet489efopd3gb9mr.apps.googleusercontent.com</string>
    <string name="mapApi">AIzaSyCwCF_qNoUb30tb6PFeXzfEbqfrIkZKI8Y</string>
    <string name="uploadLocation">Save Current Location</string>
    <string name="searchEircodeButton">Search Eircode</string>
</resources>