<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/patientFragment"
            android:icon="@drawable/ic_menu_patient"
            android:title="@string/action_addpatient" />
        <item
            android:id="@+id/patientListFragment"
            android:icon="@drawable/ic_menu_patientlist"
            android:title="@string/action_patientlist" />
        <item
            android:id="@+id/aboutscreenFragment"
            android:icon="@drawable/ic_menu_aboutscreen"
            android:title="@string/action_about" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_send" />
        </menu>
    </item>

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>