<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/patientFragment">

    <fragment
        android:id="@+id/patientFragment"
        android:name="com.mobile.communihealthv2.fragments.PatientFragment"
        android:label="@string/action_addpatient"
        tools:layout="@layout/fragment_patient" >
        <action
            android:id="@+id/action_patientFragment_to_patientListFragment"
            app:destination="@id/patientListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/patientListFragment"
        android:name="com.mobile.communihealthv2.fragments.PatientListFragment"
        android:label="@string/action_patientlist"
        tools:layout="@layout/fragment_patient_list" >
        <action
            android:id="@+id/action_patientListFragment_to_patientFragment"
            app:destination="@id/patientFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/aboutscreenFragment"
        android:name="com.mobile.communihealthv2.fragments.AboutScreenFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_aboutscreen" />
</navigation>