<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="patientvm"
            type="com.mobile.communihealthv2.ui.detail.PatientDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.detail.PatientDetailFragment">


    <EditText
        android:id="@+id/patientNumber"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:hint="@string/patientNumber"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:hint="@string/firstName"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintTop_toBottomOf="@+id/patientNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:hint="@string/lastName"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:hint="@string/birthdate"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/eircode"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:hint="@string/eircode"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintTop_toBottomOf="@+id/birthDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/editPatientButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deletePatientButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deletePatientButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editPatientButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>