<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="100dp"
            android:layout_height="108dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/patientId"
            android:layout_width="79dp"
            android:layout_height="26dp"
            android:text="@string/patientId"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.373"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061"
            tools:text="123" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="79dp"
            android:layout_height="26dp"
            android:text="@string/firstName"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.382"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.482"
            tools:text="John" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="115dp"
            android:layout_height="25dp"
            android:text="@string/lastName"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintStart_toEndOf="@+id/firstName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.486"
            tools:text="Murphy" />

        <TextView
            android:id="@+id/category"
            android:layout_width="238dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:text="@string/fullcare"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.803"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>